[gd_scene load_steps=39 format=3 uid="uid://fyqywspj68ln"]

[ext_resource type="Texture2D" uid="uid://b4naddnjmj1sm" path="res://sprites/explosion.png" id="1_17npe"]
[ext_resource type="Script" uid="uid://dhjvldh58bo3o" path="res://scripts/explosion.gd" id="2_nfeox"]
[ext_resource type="AudioStream" uid="uid://bbv0aoos7y3mp" path="res://audio/explosion.wav" id="3_aw4cw"]
[ext_resource type="Script" uid="uid://bnmtfnuij2ftc" path="res://scripts/sound.gd" id="4_3el85"]
[ext_resource type="AudioStream" uid="uid://gbhgynlub5jl" path="res://audio/explosion_reversed.wav" id="5_hbmxj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nfeox"]
atlas = ExtResource("1_17npe")
region = Rect2(160, 0, 80, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_aw4cw"]
atlas = ExtResource("1_17npe")
region = Rect2(240, 0, 80, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_3el85"]
atlas = ExtResource("1_17npe")
region = Rect2(320, 0, 80, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_hbmxj"]
atlas = ExtResource("1_17npe")
region = Rect2(400, 0, 80, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfoey"]
atlas = ExtResource("1_17npe")
region = Rect2(480, 0, 80, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_v8gpv"]
atlas = ExtResource("1_17npe")
region = Rect2(560, 0, 80, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_cun36"]
atlas = ExtResource("1_17npe")
region = Rect2(640, 0, 80, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_vk406"]
atlas = ExtResource("1_17npe")
region = Rect2(720, 0, 80, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_4jttm"]
atlas = ExtResource("1_17npe")
region = Rect2(800, 0, 80, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_6smmu"]
atlas = ExtResource("1_17npe")
region = Rect2(880, 0, 80, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_l208b"]
atlas = ExtResource("1_17npe")
region = Rect2(960, 0, 80, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvsvq"]
atlas = ExtResource("1_17npe")
region = Rect2(1040, 0, 80, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_4hpr0"]
atlas = ExtResource("1_17npe")
region = Rect2(1120, 0, 80, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_dcqkm"]
atlas = ExtResource("1_17npe")
region = Rect2(1200, 0, 80, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_pw7mt"]
atlas = ExtResource("1_17npe")
region = Rect2(1280, 0, 80, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2c5d"]
atlas = ExtResource("1_17npe")
region = Rect2(1360, 0, 80, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_0j0nb"]
atlas = ExtResource("1_17npe")
region = Rect2(1440, 0, 80, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_xe657"]
atlas = ExtResource("1_17npe")
region = Rect2(1520, 0, 80, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_6m2gf"]
atlas = ExtResource("1_17npe")
region = Rect2(1600, 0, 80, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_fasmd"]
atlas = ExtResource("1_17npe")
region = Rect2(1680, 0, 80, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_h461u"]
atlas = ExtResource("1_17npe")
region = Rect2(1760, 0, 80, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_neyb0"]
atlas = ExtResource("1_17npe")
region = Rect2(1840, 0, 80, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_0dw2d"]
atlas = ExtResource("1_17npe")
region = Rect2(1920, 0, 80, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_00uf8"]
atlas = ExtResource("1_17npe")
region = Rect2(2000, 0, 80, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohq2j"]
atlas = ExtResource("1_17npe")
region = Rect2(2080, 0, 80, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_qb5kx"]
atlas = ExtResource("1_17npe")
region = Rect2(2160, 0, 80, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_phdfj"]
atlas = ExtResource("1_17npe")
region = Rect2(2240, 0, 80, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_wlwaw"]
atlas = ExtResource("1_17npe")
region = Rect2(2320, 0, 80, 45)

[sub_resource type="SpriteFrames" id="SpriteFrames_17npe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nfeox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aw4cw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3el85")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbmxj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfoey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8gpv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cun36")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vk406")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4jttm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6smmu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l208b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvsvq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4hpr0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dcqkm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pw7mt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2c5d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0j0nb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xe657")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6m2gf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fasmd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h461u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_neyb0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0dw2d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00uf8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohq2j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qb5kx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_phdfj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wlwaw")
}],
"loop": false,
"name": &"explosion",
"speed": 16.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_hbmxj"]
radius = 11.0

[sub_resource type="Animation" id="Animation_xfoey"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area2D/CollisionShape2D:shape:radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [11.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Area2D/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, -1)]
}

[sub_resource type="Animation" id="Animation_hbmxj"]
resource_name = "explosion"
length = 1.75001
step = 0.0625
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area2D/CollisionShape2D:shape:radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.625),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [11.0, 24.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Area2D/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.625),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, -1), Vector2(-12, -15)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xfoey"]
_data = {
&"RESET": SubResource("Animation_xfoey"),
&"explosion": SubResource("Animation_hbmxj")
}

[node name="Explosion" type="AnimatedSprite2D"]
sprite_frames = SubResource("SpriteFrames_17npe")
animation = &"explosion"
speed_scale = 2.0
offset = Vector2(-20, -14)
script = ExtResource("2_nfeox")

[node name="ExplosionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_aw4cw")
script = ExtResource("4_3el85")
sfx = ExtResource("3_aw4cw")
sfx_reverse = ExtResource("5_hbmxj")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, -1)
shape = SubResource("CircleShape2D_hbmxj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xfoey")
}

[connection signal="animation_finished" from="." to="." method="_on_animation_finished"]
[connection signal="frame_changed" from="." to="." method="_on_frame_changed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
